--- a/build.gradle
+++ b/build.gradle
@@ -19,11 +19,11 @@ plugins {
 
 apply plugin: 'org.spongepowered.mixin'
 
-group = 'com.mrcrayfish.cdm'
-version = '0.5.0-dev1'
+group = 'com.ultreon.mods'
+version = '0.5.0-dev2'
 
 java {
-    archivesBaseName = 'cdm'
+    archivesBaseName = 'devices-mod'
     toolchain.languageVersion = JavaLanguageVersion.of(17)
 }
 
