--- a/.gitignore
+++ b/.gitignore
@@ -54,7 +54,8 @@ hs_err_pid*
 .LSOverride
 
 # Icon must end with two \r
-#Icon
+Icon
+!src/main/resources/assets/devices/textures/app/icon
 
 # Thumbnails
 ._*
