--- a/gradle.properties
+++ b/gradle.properties
@@ -1,8 +1,8 @@
-org.gradle.jvmargs=-Xmx1G
+org.gradle.jvmargs=-Xmx4G
 minecraft_version=1.18.2
 archives_base_name=devices
-mod_version=0.0.0
-maven_group=com.ultreon.devices
+mod_version=0.5.0-dev5
+maven_group=com.ultreon.mods
 architectury_version=4.5.76
 fabric_loader_version=0.14.8
 fabric_api_version=0.57.0+1.18.2
