--- a/fabric/build.gradle
+++ b/fabric/build.gradle
@@ -7,6 +7,10 @@ architectury {
     fabric()
 }
 
+loom {
+    accessWidenerPath = project(":common").loom.accessWidenerPath
+}
+
 repositories {
     maven { url = "https://cursemaven.com" }
 }
@@ -47,6 +51,7 @@ shadowJar {
 }
 
 remapJar {
+    injectAccessWidener = true
     input.set shadowJar.archiveFile
     dependsOn shadowJar
     classifier null
