✨ Cleanup, and added UltranLang

--- a/.gitignore
+++ b/.gitignore
@@ -122,3 +122,9 @@ run/
 
 # Arch
 .architectury-transformer
+
+# Avoid ignoring UltranLang main file.
+!*.ulan
+
+# Avoid ignoring libraries
+!libs/*
