Fixes UltranLang dependency. Thanks @Jab125

--- a/fabric/build.gradle
+++ b/fabric/build.gradle
@@ -33,6 +33,14 @@ dependencies {
     modImplementation 'com.electronwill.night-config:core:3.6.3'
     modImplementation 'com.electronwill.night-config:toml:3.6.3'
 
+    include(implementation("org.jetbrains.kotlin:kotlin-reflect:1.7.10"))
+    include(implementation("org.jetbrains.kotlin:kotlin-stdlib-jdk8:1.7.10"))
+    include(implementation("com.ultreon:ultranlang:0.0.1-dev3"))
+
+    shadowCommon "org.jetbrains.kotlin:kotlin-reflect:1.7.10"
+    shadowCommon "org.jetbrains.kotlin:kotlin-stdlib-jdk8:1.7.10"
+    shadowCommon "com.ultreon:ultranlang:0.0.1-dev3"
+
     common(project(path: ":common", configuration: "namedElements")) { transitive false }
     shadowCommon(project(path: ":common", configuration: "transformProductionFabric")) { transitive false }
 }
