Fixed UltranLang, and added setup tray items event.

--- a/common/build.gradle
+++ b/common/build.gradle
@@ -18,6 +18,10 @@ dependencies {
     // Remove the next line if you don't want to depend on the API
     modApi "dev.architectury:architectury:${rootProject.architectury_version}"
 
+    implementation("org.jetbrains.kotlin:kotlin-reflect:1.7.10")
+    implementation("org.jetbrains.kotlin:kotlin-stdlib-jdk8:1.7.10")
+    implementation("com.ultreon:ultranlang:0.0.1-dev5")
+
     modCompileOnly "curse.maven:forgeapiportfabric-547434:3671141"
     modCompileOnly 'com.electronwill.night-config:core:3.6.3'
     modCompileOnly 'com.electronwill.night-config:toml:3.6.3'
