--- a/build.gradle
+++ b/build.gradle
@@ -1,11 +1,28 @@
 plugins {
     id "architectury-plugin" version "3.4-SNAPSHOT"
     id "dev.architectury.loom" version "0.11.0-SNAPSHOT" apply false
+    id "io.github.pacifistmc.forgix" version "1.2.2"
 }
-
 architectury {
     minecraft = rootProject.minecraft_version
 }
+
+forgix {
+    group = "com.ultreon.mods"
+    mergedJarName = "devices-${mod_version}.jar"
+    outputDir = "build/libs/merged"
+
+    forge {
+        mixin "devices-common.mixins.json"
+        mixin "devices.mixins.json"
+    }
+
+    fabric {
+
+    }
+}
+
+println "forgix.outputDir = $forgix.outputDir"
 
 subprojects {
     apply plugin: "dev.architectury.loom"
