--- a/forge/build.gradle
+++ b/forge/build.gradle
@@ -2,6 +2,8 @@ plugins {
     id "com.github.johnrengelman.shadow" version "7.1.2"
 }
 
+version rootProject.property("mod_version")
+
 architectury {
     platformSetupLoomIde()
     forge()
