--- a/forge/src/main/resources/META-INF/mods.toml
+++ b/forge/src/main/resources/META-INF/mods.toml
@@ -13,7 +13,7 @@ version = "${version}"
 displayName = "Devices Mod"
 #updateJSONURL="http://myurl.me/"
 displayURL = "https://mrcrayfish.com/mods?id=devices"
-#logoFile="device-mod.png"
+logoFile="ultreon.devices-mod.png"
 credits = "Thanks to MrCrayfish for the idea and the original mod that was made in 1.12.2. Thank you to MinecraftDoodler for helping with textures. Cheers to these people for donating during the development: Mastef Chief, Haunted Corpse, Jake Crowley, fabbe50, PlayDashGaming, jack jook, Hunstagamez, Techyy YT, MinecraftDoodler, Norge100YT, Cyberman2208, CreepergamingsMC"
 authors = "Qboi123"
 description = '''
