--- a/common/build.gradle
+++ b/common/build.gradle
@@ -21,6 +21,7 @@ dependencies {
     implementation("org.jetbrains.kotlin:kotlin-reflect:1.7.10")
     implementation("org.jetbrains.kotlin:kotlin-stdlib-jdk8:1.7.10")
     modApi("com.ultreon:ultranlang:0.0.1-dev5")
+    modApi("com.jab125:apoint:1.0.0")
 
     modCompileOnly "curse.maven:forgeapiportfabric-547434:3671141"
     modCompileOnly 'com.electronwill.night-config:core:3.6.3'
