--- a/forge/build.gradle
+++ b/forge/build.gradle
@@ -37,14 +37,16 @@ dependencies {
     forgeRuntimeLibrary "org.jetbrains.kotlin:kotlin-reflect:1.7.10"
     forgeRuntimeLibrary "org.jetbrains.kotlin:kotlin-stdlib-jdk8:1.7.10"
     forgeRuntimeLibrary "com.ultreon:ultranlang:0.0.1-dev5"
+    forgeRuntimeLibrary "com.jab125:apoint:1.0.0"
 
     implementation("org.jetbrains.kotlin:kotlin-reflect:1.7.10")
     implementation("org.jetbrains.kotlin:kotlin-stdlib-jdk8:1.7.10")
     implementation("com.ultreon:ultranlang:0.0.1-dev5")
+    implementation include("com.jab125:apoint:1.0.0")
 
     shadowCommon "org.jetbrains.kotlin:kotlin-reflect:1.7.10"
     shadowCommon "org.jetbrains.kotlin:kotlin-stdlib-jdk8:1.7.10"
-    shadowCommon "com.ultreon:ultranlang:0.0.1-dev5"
+    shadowCommon "com.jab125:apoint:1.0.0"
 }
 
 processResources {
