--- a/fabric/build.gradle
+++ b/fabric/build.gradle
@@ -38,10 +38,12 @@ dependencies {
     include(implementation("org.jetbrains.kotlin:kotlin-reflect:1.7.10"))
     include(implementation("org.jetbrains.kotlin:kotlin-stdlib-jdk8:1.7.10"))
     include(implementation("com.ultreon:ultranlang:0.0.1-dev5"))
+    include(implementation("com.jab125:apoint:1.0.0"))
 
     shadowCommon "org.jetbrains.kotlin:kotlin-reflect:1.7.10"
     shadowCommon "org.jetbrains.kotlin:kotlin-stdlib-jdk8:1.7.10"
     shadowCommon "com.ultreon:ultranlang:0.0.1-dev5"
+    shadowCommon "com.jab125:apoint:1.0.0"
 
     modRuntimeOnly("net.fabricmc:fabric-language-kotlin:1.8.2+kotlin.1.7.10")
 
