--- a/forge/build.gradle
+++ b/forge/build.gradle
@@ -39,14 +39,14 @@ dependencies {
     forgeRuntimeLibrary "com.ultreon:ultranlang:0.0.1-dev5"
     forgeRuntimeLibrary "com.jab125:apoint:1.0.0"
 
-    implementation("org.jetbrains.kotlin:kotlin-reflect:1.7.10")
-    implementation("org.jetbrains.kotlin:kotlin-stdlib-jdk8:1.7.10")
-    implementation("com.ultreon:ultranlang:0.0.1-dev5")
+    implementation include("org.jetbrains.kotlin:kotlin-reflect:1.7.10")
+    implementation include("org.jetbrains.kotlin:kotlin-stdlib-jdk8:1.7.10")
+    implementation include("com.ultreon:ultranlang:0.0.1-dev5")
     implementation include("com.jab125:apoint:1.0.0")
 
-    shadowCommon "org.jetbrains.kotlin:kotlin-reflect:1.7.10"
-    shadowCommon "org.jetbrains.kotlin:kotlin-stdlib-jdk8:1.7.10"
-    shadowCommon "com.jab125:apoint:1.0.0"
+   // shadowCommon "org.jetbrains.kotlin:kotlin-reflect:1.7.10"
+    //shadowCommon "org.jetbrains.kotlin:kotlin-stdlib-jdk8:1.7.10"
+   // shadowCommon "com.jab125:apoint:1.0.0"
 }
 
 processResources {
@@ -63,11 +63,11 @@ shadowJar {
     configurations = [project.configurations.shadowCommon]
     classifier "dev-shadow"
 
-    relocate 'org.jetbrains.kotlin', "com.ultreon.devices.shadow.org.jetbrains.kotlin"
-    relocate 'org.jetbrains.kotlinx', "com.ultreon.devices.shadow.org.jetbrains.kotlinx"
-
-    relocate 'kotlin', "com.ultreon.devices.shadow.kotlin"
-    relocate 'kotlinx', "com.ultreon.devices.shadow.kotlinx"
+//    relocate 'org.jetbrains.kotlin', "com.ultreon.devices.shadow.org.jetbrains.kotlin"
+//    relocate 'org.jetbrains.kotlinx', "com.ultreon.devices.shadow.org.jetbrains.kotlinx"
+//
+//    relocate 'kotlin', "com.ultreon.devices.shadow.kotlin"
+//    relocate 'kotlinx', "com.ultreon.devices.shadow.kotlinx"
 }
 
 remapJar {
