--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -31,6 +31,8 @@ jobs:
         run: chmod +x ./gradlew
       - name: build
         run: ./gradlew build mergeJars
+        env:
+          GITHUB_BUILD_NUMBER: ${{ github.run_number }}
       - name: capture fabric's build artifacts
         if: ${{ runner.os == 'Linux' && matrix.java == '17' }} # Only upload artifacts built from latest java on one OS
         uses: actions/upload-artifact@v2
