--- a/build.gradle
+++ b/build.gradle
@@ -7,14 +7,15 @@ plugins {
 architectury {
     minecraft = rootProject.minecraft_version
 }
+version = "${mod_version}+${System.getenv("GITHUB_BUILD_NUMBER") == null ? "local" : System.getenv("GITHUB_BUILD_NUMBER")}";
 
 forgix {
     group = "com.ultreon.mods"
-    mergedJarName = "devices-${mod_version}.jar"
+    mergedJarName = "devices-${version}.jar"
     outputDir = "build/libs/merged"
 
     forge {
-        jarLocation = "build/libs/devices-${mod_version}.jar"
+        jarLocation = "build/libs/devices-${version}.jar"
         additionalRelocate("com.ultreon.devices", "forge.com.ultreon.devices")
 
         mixin "devices-common.mixins.json"
@@ -22,7 +23,7 @@ forgix {
     }
 
     fabric {
-        jarLocation = "build/libs/devices-${mod_version}.jar"
+        jarLocation = "build/libs/devices-${version}.jar"
         additionalRelocate("com.ultreon.devices", "fabric.com.ultreon.devices")
     }
 }
@@ -56,7 +57,7 @@ allprojects {
     apply plugin: "maven-publish"
 
     archivesBaseName = rootProject.archives_base_name
-    version = rootProject.mod_version
+    version = rootProject.version
     group = rootProject.maven_group
 
     repositories {
