--- a/fabric/build.gradle
+++ b/fabric/build.gradle
@@ -2,7 +2,7 @@ plugins {
     id "com.github.johnrengelman.shadow" version "7.1.2"
 }
 
-version rootProject.property("mod_version")
+version rootProject.version
 
 architectury {
     platformSetupLoomIde()
