try fix discord

--- a/build.gradle
+++ b/build.gradle
@@ -7,8 +7,11 @@ plugins {
 architectury {
     minecraft = rootProject.minecraft_version
 }
-version = "${mod_version}+${System.getenv("GITHUB_BUILD_NUMBER") == null ? "local" : System.getenv("GITHUB_BUILD_NUMBER")}";
+version = "${mod_version}-${System.getenv("GITHUB_BUILD_NUMBER") == null ? "local" : System.getenv("GITHUB_BUILD_NUMBER")}"
 
+Object getIngame_version() {
+    return "${mod_version}+${System.getenv("GITHUB_BUILD_NUMBER") == null ? "local" : System.getenv("GITHUB_BUILD_NUMBER")}"
+}
 forgix {
     group = "com.ultreon.mods"
     mergedJarName = "devices-${version}.jar"
