--- a/forge/build.gradle
+++ b/forge/build.gradle
@@ -50,10 +50,10 @@ dependencies {
 }
 
 processResources {
-    inputs.property "version", project.version
+    inputs.property "version", rootProject.getIngame_version()
 
     filesMatching("META-INF/mods.toml") {
-        expand "version": project.version
+        expand "version": rootProject.getIngame_version()
     }
 }
 
