--- a/fabric/build.gradle
+++ b/fabric/build.gradle
@@ -57,10 +57,10 @@ dependencies {
 }
 
 processResources {
-    inputs.property "version", project.version
+    inputs.property "version", rootProject.getIngame_version()
 
     filesMatching("fabric.mod.json") {
-        expand "version": project.version
+        expand "version": rootProject.getIngame_version()
     }
 }
 
