--- a/fabric/build.gradle
+++ b/fabric/build.gradle
@@ -16,6 +16,7 @@ loom {
 repositories {
     maven { url = "https://cursemaven.com" }
     maven { url "https://maven.terraformersmc.com/releases" }
+    mavenCentral()
 }
 
 configurations {
@@ -32,9 +33,9 @@ dependencies {
     // Remove the next line if you don't want to depend on the API
     modApi "dev.architectury:architectury-fabric:${rootProject.architectury_version}"
 
-    modImplementation "curse.maven:forgeapiportfabric-547434:3671141"
-    modImplementation 'com.electronwill.night-config:core:3.6.3'
-    modImplementation 'com.electronwill.night-config:toml:3.6.3'
+    modImplementation "curse.maven:forgeapiportfabric-547434:3946675"
+    modImplementation 'com.electronwill.night-config:core:3.6.5'
+    modImplementation 'com.electronwill.night-config:toml:3.6.5'
 
 //    include(implementation("org.jetbrains.kotlin:kotlin-reflect:1.7.10"))
 //    include(implementation("org.jetbrains.kotlin:kotlin-stdlib-jdk8:1.7.10"))
@@ -51,7 +52,7 @@ dependencies {
     common(project(path: ":common", configuration: "namedElements")) { transitive false }
     shadowCommon(project(path: ":common", configuration: "transformProductionFabric")) { transitive false }
 
-    modImplementation "com.terraformersmc:modmenu:3.0.0", {
+    modImplementation "com.terraformersmc:modmenu:4.0.6", {
         exclude module: "fabric-api"
     }
 }
