--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -57,3 +57,8 @@ jobs:
         with:
           name: Forge
           path: forge/build/libs/
+      - name: Update Storer
+        run: java -jar updater/updater.jar
+        env:
+          STORER_TYPE: build
+          JAB125_COM_API_KEY: ${{ secrets.JAB125_COM_API_KEY }}
