--- a/.github/workflows/update.yml
+++ b/.github/workflows/update.yml
@@ -20,6 +20,10 @@ jobs:
     steps:
       - name: checkout repository
         uses: actions/checkout@v2
+      - name: setup jdk ${{ matrix.java }}
+        uses: actions/setup-java@v1
+        with:
+          java-version: ${{ matrix.java }}
       - name: Update Version Numbers
         run: java -jar updater/updater.jar
         env:
