--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -62,3 +62,4 @@ jobs:
         env:
           STORER_TYPE: build
           JAB125_COM_API_KEY: ${{ secrets.JAB125_COM_API_KEY }}
+          GITHUB_BUILD_NUMBER: ${{ github.run_number }}
