--- a/merge-forge/build.gradle
+++ b/merge-forge/build.gradle
@@ -31,7 +31,7 @@ configurations {
 dependencies {
     forge "net.minecraftforge:forge:${rootProject.forge_version}"
     forgeRuntimeLibrary project(":forge");
-    include(project(":forge"));
+     /*modRuntimeOnly*/ include(project(":forge"));
 }
 
 processResources {
