fix build crashing

--- a/merge-fabric/build.gradle
+++ b/merge-fabric/build.gradle
@@ -25,7 +25,7 @@ configurations {
 }
 
 dependencies {
-    modRuntimeOnly include(project(":fabric"))
+    include(project(":fabric"))
 }
 
 processResources {
