--- a/common/src/main/resources/assets/devices/apps/settings.json
+++ b/common/src/main/resources/assets/devices/apps/settings.json
@@ -1,6 +1,6 @@
 {
     "name": "Settings",
-    "author": "MrCrayfish, Jab125",
+    "authors": ["MrCrayfish", "Jab125"],
     "description": "",
     "version": "1.0",
     "screenshots": [
