--- a/forge/build.gradle
+++ b/forge/build.gradle
@@ -89,6 +89,7 @@ processResources {
 
 shadowJar {
     exclude "fabric.mod.json"
+    exclude "architectury.common.json"
 
     configurations = [project.configurations.shadowCommon]
     classifier "dev-shadow"
