--- a/common/src/main/resources/assets/devices/apps/settings.json
+++ b/common/src/main/resources/assets/devices/apps/settings.json
@@ -1,7 +1,6 @@
 {
-    "schemaVersion": 2,
     "name": "Settings",
-    "authors": ["MrCrayfish", "Jab125"],
+    "author": "MrCrayfish, Jab125",
     "description": "",
     "version": "1.0",
     "screenshots": [
