@Qboi123 what even happened in 0bca37b1

--- a/common/src/main/resources/assets/devices/apps/app_store.json
+++ b/common/src/main/resources/assets/devices/apps/app_store.json
@@ -1,6 +1,7 @@
 {
+    "schemaVersion": 2,
     "name": "Application Market",
-    "author": "MrCrayfish, Jab125",
+    "authors": ["MrCrayfish", "Jab125"],
     "description": "${desc}",
     "version": "1.0",
     "screenshots": [
