--- a/merge-forge/build.gradle
+++ b/merge-forge/build.gradle
@@ -29,7 +29,7 @@ configurations {
 }
 
 dependencies {
-    forge "net.minecraftforge:forge:${rootProject.forge_version}"
+    forge "net.minecraftforge:forge:${rootProject.architectury.minecraft}-${rootProject.forge_version}"
     forgeRuntimeLibrary project(":forge");
      /*modRuntimeOnly*/ include(project(":forge"));
 }
