--- a/gradle.properties
+++ b/gradle.properties
@@ -1,9 +1,11 @@
 org.gradle.jvmargs=-Xmx5G
 minecraft_version=1.19.2
 archives_base_name=devices
-mod_version=0.5.1
+mod_version=0.5.2
 maven_group=com.ultreon.mods
 architectury_version=6.2.43
 fabric_loader_version=0.14.8
 fabric_api_version=0.60.0+1.19.2
-forge_version=1.19.2-43.1.3
+forge_version=43.1.3
+
+mod_description=Adds working electronic devices into Minecraft!
