--- a/build.gradle
+++ b/build.gradle
@@ -21,28 +21,28 @@ Object getIngame_version() {
 Object getModDescription() {
     return "${mod_description}"
 }
-forgix {
-    group = "com.ultreon.mods"
-    mergedJarName = "devices-${version}.jar"
-    outputDir = "build/libs/merged"
-
-    forge {
-        projectName = "merge-forge"
-        jarLocation = "build/libs/devices-${version}.jar"
-       // additionalRelocate("com.ultreon.devices", "forge.com.ultreon.devices")
-
-    //    mixin "devices-common.mixins.json"
-   //     mixin "devices.mixins.json"
-    }
-
-    fabric {
-        projectName = "merge-fabric"
-        jarLocation = "build/libs/devices-${version}.jar"
-     //   additionalRelocate("com.ultreon.devices", "fabric.com.ultreon.devices")
-    }
-}
-
-println "forgix.outputDir = $forgix.outputDir"
+//forgix {
+//    group = "com.ultreon.mods"
+//    mergedJarName = "devices-${version}.jar"
+//    outputDir = "build/libs/merged"
+//
+//    forge {
+//        projectName = "merge-forge"
+//        jarLocation = "build/libs/devices-${version}.jar"
+//       // additionalRelocate("com.ultreon.devices", "forge.com.ultreon.devices")
+//
+//    //    mixin "devices-common.mixins.json"
+//   //     mixin "devices.mixins.json"
+//    }
+//
+//    fabric {
+//        projectName = "merge-fabric"
+//        jarLocation = "build/libs/devices-${version}.jar"
+//     //   additionalRelocate("com.ultreon.devices", "fabric.com.ultreon.devices")
+//    }
+//}
+//
+//println "forgix.outputDir = $forgix.outputDir"
 
 subprojects {
     apply plugin: "dev.architectury.loom"
@@ -97,5 +97,5 @@ allprojects {
     }
 }
 
-mergeJars.mustRunAfter build
+//mergeJars.mustRunAfter build
 //build.dependsOn mergeJars
