--- a/gradle.properties
+++ b/gradle.properties
@@ -1,11 +1,11 @@
 org.gradle.jvmargs=-Xmx5G
-minecraft_version=1.19.2
+minecraft_version=22w43a
 archives_base_name=devices
 mod_version=0.5.2
 maven_group=com.ultreon.mods
-architectury_version=6.2.43
-fabric_loader_version=0.14.8
-fabric_api_version=0.60.0+1.19.2
+architectury_version=7.0.52
+fabric_loader_version=0.14.10
+fabric_api_version=0.65.1+1.19.3
 forge_version=43.1.3
 
 mod_description=Adds working electronic devices into Minecraft!
