--- a/settings.gradle
+++ b/settings.gradle
@@ -9,6 +9,6 @@ pluginManagement {
 
 include("common")
 include("fabric")
-include("forge")
-include("merge-fabric")
-include("merge-forge")
+//include("forge")
+//include("merge-fabric")
+//include("merge-forge")
