Updated UltranLang to 0.1.0+6 and added some annotations to mark internal use.

--- a/common/build.gradle
+++ b/common/build.gradle
@@ -20,7 +20,7 @@ dependencies {
 
     implementation("org.jetbrains.kotlin:kotlin-reflect:1.7.10")
     implementation("org.jetbrains.kotlin:kotlin-stdlib-jdk8:1.7.10")
-    modApi("com.ultreon:ultranlang:0.0.1-dev5")
+    modApi("com.ultreon:ultranlang:0.1.0+6")
     modApi("com.jab125:apoint:1.0.0")
 
     modCompileOnly "curse.maven:forgeapiportfabric-547434:3671141"
