--- a/forge/build.gradle
+++ b/forge/build.gradle
@@ -1,3 +1,4 @@
+//file:noinspection GrDeprecatedAPIUsage
 plugins {
     id "com.github.johnrengelman.shadow" version "7.1.2"
 }
@@ -51,7 +52,7 @@ dependencies {
 
     forgeRuntimeLibrary "org.jetbrains.kotlin:kotlin-stdlib-jdk7:1.7.10"
     forgeRuntimeLibrary "org.jetbrains.kotlin:kotlin-stdlib:1.7.10"
-    forgeRuntimeLibrary "com.ultreon:ultranlang:0.0.1-dev5"
+    forgeRuntimeLibrary "com.ultreon:ultranlang:0.1.0+6"
     forgeRuntimeLibrary "com.jab125:apoint:1.0.0"
 
 //    include("org.jetbrains.kotlin:kotlin-stdlib:1.7.10")
@@ -71,7 +72,7 @@ dependencies {
 //    include("org.jetbrains.kotlin:kotlin-stdlib-jdk7:1.7.10")
 //    include("org.jetbrains.kotlin:kotlin-stdlib:1.7.10")
 
-    implementation include("com.ultreon:ultranlang:0.0.1-dev5")
+    implementation include("com.ultreon:ultranlang:0.1.0+6")
     implementation include("com.jab125:apoint:1.0.0")
 
    // shadowCommon "org.jetbrains.kotlin:kotlin-reflect:1.7.10"
