--- a/gradle.properties
+++ b/gradle.properties
@@ -9,3 +9,8 @@ fabric_api_version=0.60.0+1.19.2
 forge_version=43.1.3
 
 mod_description=Adds working electronic devices into Minecraft!
+
+# Geckolib
+geckolib_version_fabric=3.1.20
+geckolib_version_quilt=3.1.20
+geckolib_version_forge=3.1.21
