--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -25,7 +25,9 @@ jobs:
       - name: setup jdk ${{ matrix.java }}
         uses: actions/setup-java@v1
         with:
+          distribution: 'temurin'
           java-version: ${{ matrix.java }}
+          cache: 'gradle'
       - name: make gradle wrapper executable
         if: ${{ runner.os != 'Windows' }}
         run: chmod +x ./gradlew
