--- a/.github/workflows/codeql-analysis.yml
+++ b/.github/workflows/codeql-analysis.yml
@@ -59,7 +59,9 @@ jobs:
     - name: setup jdk ${{ matrix.java }}
       uses: actions/setup-java@v1
       with:
+        distribution: 'temurin'
         java-version: ${{ matrix.java }}
+        cache: 'gradle'
     - name: build
       run: ./gradlew build mergeJars
 
